# LLM-Engineering

./: LLM_Call.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: LLM_Call-checkpoint.ipynb
