[project]
name = "simple-llm-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gradio>=6.5.1",
    "langchain>=1.2.7",
    "langchain-openai>=1.1.7",
    "litellm[proxy]>=1.81.6",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
